# sso-testing

./: README.md  function_app.py  pyproject.toml
.github/workflows/: master_rai-login.yml
